--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -3,8 +3,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Hack Book</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
   <title>Tōku App</title>
   <link rel="stylesheet" href="../static/main.css">
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -13,48 +11,34 @@
 <body>
   <h1 id='header'>Tōku</h1>
   <div id="container">
-    <h1>{{name}}</h1>
-
-    <img src="https://lh3.googleusercontent.com/VEYLsRsafd13aXnYgt0xP7cuNwXRmnvZAkPOYBD0ujgjZB0FFccJGNshOcNa5zqJiggauDZwB6VdZ_NTxG12rnYXrajTkHLe7sIy0oLVjRWIvftoHl1fPSVz4852YyRNM5EVt8f8ahmwpMYFzjsdBsck6YDkhYuQQxS74R5c49KQDp5bBpOm98X71PINKwLbXpZ-bjOQlDyC_U4EZxsxDk3hhyUsOE23f9zIfXo6TDQGUQivr5mYdv1hN4JOqYgGx5c8Jkjh7OGl6njA62QDcDhczx53_sjtgsCYhWD1yPwzoi1o85Ech_qZNJf0K_928eFDgGGbUYlXXjmwoR8sEBvZ6jb6BajjE8068EDzSKGfAyhuHKH_aXHJG8Ctp7OFpKm9QXc2Wo-K9ToTNFnLNEjsndB6gATT_ysNNuv4IzEeAsRbOldvSaoHCR1rgmDTUqvPPtCr7flCTn7Y0wB3Nlaw8IhujLkkvnSu5m87GdRoDfxlyrZC0HWYMpTIUjpmNPK_QSLGT8lw2gvGsOmrm_dPYEczzqyDessFPvU3ouSr_vS_6009zlAzPYkb5nP3kg_8vWuPqPn9yoo2CgLZBblbHde8k_nRjgJ6zb8_3ZJW-xIx86A-nOYl0RxF_wCoUdTLpn95TYB4O6DJHRdfw2RPrZIZUnYGeDclikuRglRDUSscOmb0CfR0LXitmjA=w942-h947-no?authuser=0">
-
-    <p>Welcome to my hack book portfolio! I'm ready to do some cool stuff</p>
     <div id = "left">
       <nav id ="sidebar">
         <div class="sidebar-header">
-          <h3>Tōku Navigation</h3>
+          <h3>Tōku Menu</h3>
         </div>
-      <u1 class="list-unstyled components">
-        <p> profile name goes here</p>
-        <li>
-          <a href="#">Profile</a>
+        <u1 class="list-unstyled components">
+         <p> profile name goes here</p>
+         <li>
+          <a class="btn" href="/register">Profile</a>
+         </li>
+         <li>
+          <a class="btn" href="/matchpage">Match</a>
+          </li>
+         <li>
+          <a class="btn" href="#">Community</a>
         </li>
         <li>
-          <a href="matchpage.html">Match</a>
+          <a class="btn" href="#">Friends</a>
         </li>
         <li>
-          <a href="#">Community</a>
-        </li>
-        <li>
-          <a href="#">Friends</a>
-        </li>
-        <li>
-          <a href="#">Help/FAQ</a>
+          <a class="btn" href="#">Help/FAQ</a>
         </li>
       </u1>
       </nav>
     </div>
     <div id = "right">
       <img src= "https://kirbiecravings.com/wp-content/uploads/2018/08/salt-pepper-tofu-12.jpg">
-
-    
       <p>Welcome to Tōku!</p> <br>
-
-    <input type="text" id="title"><br>
-    <input type="text" id="description"><br>
-    <div class="ui button" id="post-button">Post</div>
-    
-  
-
       <p1>basic information about Tōku</p1>
   </div>
 
