--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -1,45 +1,19 @@
-<!-- index.html at the end of workshop 2 -->
 
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Tōku App</title>
-  <link rel="stylesheet" href="../static/main.css">
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <script src="../static/script.js"></script>
-</head>
-<body>
-  <h1 id='header'>Tōku</h1>
-  <div id="container">
-    <div id = "left">
-      <nav id ="sidebar">
-        <div class="sidebar-header">
-          <h3>Tōku Menu</h3>
-        </div>
-        <u1 class="list-unstyled components">
-         <p> profile name goes here</p>
-         <li>
-          <a class="btn" href="/register">Profile</a>
-         </li>
-         <li>
-          <a class="btn" href="/matchpage">Match</a>
-          </li>
-         <li>
-          <a class="btn" href="#">Community</a>
-        </li>
-        <li>
-          <a class="btn" href="#">Friends</a>
-        </li>
-        <li>
-          <a class="btn" href="#">Help/FAQ</a>
-        </li>
-      </u1>
-      </nav>
+{% extends 'base.html'%}
+
+{%block head %}
+
+{% endblock %}
+
+{% block content %}
+    <h1 id='header'>Tōku</h1>
+    <button type="button" id="Register" onclick="window.location = '/register'">Register</button>   
+    <div id="container">
+      <div id = "right">
+        <img src= "https://kirbiecravings.com/wp-content/uploads/2018/08/salt-pepper-tofu-12.jpg">
+        <p>Welcome to Tōku!</p> <br>
+        <p1>basic information about Tōku</p1> 
     </div>
-    <div id = "right">
-      <img src= "https://kirbiecravings.com/wp-content/uploads/2018/08/salt-pepper-tofu-12.jpg">
-      <p>Welcome to Tōku!</p> <br>
-      <p1>basic information about Tōku</p1>
-  </div>
+{% endblock%}
 
-  <!-- <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script> -->
+
