create base html

--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -7,13 +7,15 @@
 
 {% block content %}
     <h1 id='header'>Tōku</h1>
-    <button type="button" id="Register" onclick="window.location = '/register'">Register</button>   
     <div id="container">
       <div id = "right">
         <img src= "https://kirbiecravings.com/wp-content/uploads/2018/08/salt-pepper-tofu-12.jpg">
         <p>Welcome to Tōku!</p> <br>
         <p1>basic information about Tōku</p1> 
+        <button type="button" id="login" onclick="window.location = '/login'">Login</button>   
+        <button type="button" id="register" onclick="window.location = '/register'">Register</button>   
     </div>
+
 {% endblock%}
 
 
