--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -6,7 +6,6 @@
   <title>Tōku App</title>
   <link rel="stylesheet" href="../static/base.css">
   <link rel="stylesheet" href="../static/main.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css">
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="../static/script.js"></script>
   {%block head %}{% endblock %}
@@ -43,12 +42,10 @@
             <div class="container-fluid">
                 <button type="button" id="sidebarCollapse" class="btn btn-info">
                     <i class="fas fa-align-left"></i>
-                    <span>Navigation Menu</span>
+                    <span>Toggle Sidebar</span>
                 </button>
             </div>
         </nav>
-      {% block content %}{% endblock %}
-      {%block body %} {% endblock %}
       </div>
     </div>
     <!-- jQuery CDN - Slim version (=without AJAX) -->
@@ -59,6 +56,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
     <!-- jQuery Custom Scroller CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script>
+    {% block content %}{% endblock %}
+      {%block body %} {% endblock %}
   </body>
 </html>
 
