new commit with languages page

--- a/backend/static/register.css
+++ b/backend/static/register.css
@@ -21,6 +21,10 @@ h1 {
     box-sizing: border-box;
   }
 
+  /*.languages{
+    display: inline-block;
+  }*/
+
   select {
     width: 100%;
     padding: 12px 15px;
@@ -50,3 +54,48 @@ h1 {
     display: inline-block;
     font-size: 14px;
   }
+
+/* @import url(https://fonts.googleapis.com/css?family=Open+Sans);
+
+input[type="checkbox"] { display: none; }
+
+input[type="checkbox"] + label {
+  display: block;
+  position: relative;
+  padding-left: 2px;
+  margin-bottom: 20px;
+  font: 14px/20px 'Open Sans', Arial, sans-serif;
+  color: black;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+}
+
+input[type="checkbox"] + label:last-child { margin-bottom: 0; }
+
+input[type="checkbox"] + label:before {
+  content: '';
+  display: block;
+  width: 20px;
+  height: 20px;
+  border: 1px solid #e4532d;
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: .6;
+  -webkit-transition: all .12s, border-color .08s;
+  transition: all .12s, border-color .08s;
+}
+
+input[type="checkbox"]:checked + label:before {
+  width: 10px;
+  top: -5px;
+  left: 5px;
+  border-radius: 0;
+  opacity: 1;
+  border-top-color: transparent;
+  border-left-color: transparent;
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+} */
