--- a/backend/templates/register.html
+++ b/backend/templates/register.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="../static/register.css">
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="../static/script.js"></script>
+
 </head>
 <body>
     <h1>Register</h1>
@@ -50,10 +51,11 @@
                     <label for="confirmpassword">Confirm Password</label>
                     <input type="password" class="" id="confirmpassword" name="confirmpassword">
                 </div>
-                <button type="submit" id="submit">SUBMIT</button>   
+                <button type="submit" id="submit" onclick="window.location = '/languages'">SUBMIT</button>
+
+                <!--<button type="submit" id="submit" data-toggle="modal">SUBMIT</button>-->
             </form>
 
-    </div>
-    
+
 </body>
 </html>
