html with jinja

--- a/backend/templates/matchpage.html
+++ b/backend/templates/matchpage.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html> 
-<html> 
-<head>
-    <title> Matches </title>
-</head>
-<body> 
+{% extends 'base.html'%}
+
+{%block head %}
+
+{% endblock %}
+
+{% block content %}
     basic hi
-</body>
-</html>
+{% endblock%}
