--- a/backend/templates/profile.html
+++ b/backend/templates/profile.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Profile</title>
-</head>
-<body>
+{% extends 'base.html'%}
+
+{%block head %}
+
+{% endblock %}
+
+{% block content %}
   <div id="container">
     <h1>{{name}}</h1>
     
   </div>
-</body>
-</html>
+{% endblock%}
