--- a/backend/templates/register.html
+++ b/backend/templates/register.html
@@ -1,14 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Hack Book</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
-  <link rel="stylesheet" href="../static/register.css">
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <script src="../static/script.js"></script>
+{% extends 'base.html'%}
 
-</head>
-<body>
+{%block head %}
+
+{% endblock %}
+
+{% block content %}
     <h1>Register</h1>
     <div class="row">
             <form name="Register" method='POST' action='/register'>
@@ -56,6 +52,4 @@
                 <!--<button type="submit" id="submit" data-toggle="modal">SUBMIT</button>-->
             </form>
 
-
-</body>
-</html>
+{% endblock%}
