Most updated ver

--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -4,31 +4,17 @@
 {%block head %}
 
 {% endblock %}
-<<<<<<< HEAD
 
 {% block content %}
-    <h1 id='header'>Tōku</h1>
+    <h1 id='header'>Tōku</h1>   
     <div id="container">
       <div id = "right">
         <img src= "https://kirbiecravings.com/wp-content/uploads/2018/08/salt-pepper-tofu-12.jpg">
-        <p>Welcome to Tōku!</p> <br>
+        <p>Welcome to Tōku!</p>
         <p1>basic information about Tōku</p1> <br>
-        <button type="button" id="login" onclick="window.location = '/login'">Login</button> 
-        <button type="button" id="register" onclick="window.location = '/register'">Register</button>   
+        <button type="button" id="Register" onclick="window.location = '/register'">Register</button>
+        <button type="button" id="Login" onclick="window.location = '/login'">Login</button>
     </div>
-
-=======
-
-{% block content %}
-    <h1 id='header'>Tōku</h1>
-    <button type="button" id="Register" onclick="window.location = '/register'">Register</button>   
-    <div id="container">
-      <div id = "right">
-        <img src= "https://kirbiecravings.com/wp-content/uploads/2018/08/salt-pepper-tofu-12.jpg">
-        <p>Welcome to Tōku!</p> <br>
-        <p1>basic information about Tōku</p1> 
-    </div>
->>>>>>> a7e4434208f3f8c2d616b497244bb02a7aff66cf
 {% endblock%}
 
 
