--- a/backend/templates/login.html
+++ b/backend/templates/login.html
@@ -17,6 +17,20 @@
                 <label for="password"> Password: </label>
                 <input type="password" id="password" name="password" placeholder="Password"> 
                 <input type="checkbox" onclick="showPassword()">Show Password
+                <script>
+                  function showPassword()
+                  {
+                  var x = document.getElementById("password");
+                    if (x.type === "password") 
+                    {
+                      x.type = "text";
+                    } 
+                    else 
+                    {
+                        x.type = "password";
+                    }
+                  }
+                </script>
             </p>
             <p>
                 <button class="submitButton" id="submit_Button"> Submit </button>
