--- a/backend/static/register.css
+++ b/backend/static/register.css
@@ -24,7 +24,9 @@ h1 {
   /*.languages{
     display: inline-block;
   }*/
-
+  #row {
+    font-size: 30px;
+  }
   select {
     width: 100%;
     padding: 12px 15px;
