--- a/backend/templates/profile.html
+++ b/backend/templates/profile.html
@@ -5,18 +5,36 @@
 {% endblock %}
 
 {% block content %}
+  <h1>Profile Page</h1>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="">Tōku</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="#">Features</a>
-        <a class="nav-item nav-link" href="#">Pricing</a>
-        <a class="nav-item nav-link disabled" href="#">Disabled</a>
+        <a class="nav-item nav-link" href="/profile">Profile <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="/matchpage">Matches</a>
+        <a class="nav-item nav-link" href="/friends">Friends</a>
+        <a class="nav-item nav-link" href="#">Help/FAQ</a>
       </div>
     </div>
   </nav>
+  <div id="container">
+    <div class="circular"> 
+        <img src = "https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQRo02mVBfNlT-1_mJo78ttRnuhNHVyTTRPqQ&usqp=CAU"> <br>
+    </div>
+    <label class="profile_name" id="profile_name"> Jane Doe </label>
+    <div id="attributes">
+        <label class="profile_attributes" id="name" name="name"> Name: {{name}} </label> <br>
+        <label class="profile_attributes" id="birthday" name="birthday"> Birthday: {{birthday}} </label><br>
+        <label class="profile_attributes" id="gender" name="gender"> Gender: {{gender}} </label><br>
+        <label class="profile_attributes" id="email" name="email"> Email Address: {{email}} </label><br>
+        <label class="profile_attributes" id="date_created" name="date_created"> Date Created: {{date_created}} </label><br>
+      </div>
+    <div id="buttons">
+      <button type="button" id="Edit" onclick="window.location = '/register'">Register</button>
+      <button type="button" id="Submit" onclick="window.location = '/login'">Login</button>
+    </div>
+  </div>
 {% endblock%}
