--- a/backend/templates/languages.html
+++ b/backend/templates/languages.html
@@ -7,7 +7,7 @@
 {% block content %}
     <h1>Languages</h1>
 
-    <div class="row">
+    <div id="container">
             <form name="Languages" method='POST' action='/languages'>
         
                 <h2>What languages can you speak?</h2>
