--- a/backend/templates/register.html
+++ b/backend/templates/register.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <h1>Register</h1>
-    <div class="row">
+    <div id="container">
             <form name="Register" method='POST' action='/register'>
                 <div class="signup">
                     <label for="name">Name</label>
