--- a/backend/static/register.css
+++ b/backend/static/register.css
@@ -1,6 +1,7 @@
 
-body {
+#container {
     text-align: center;
+    margin: auto;
     background: #fef2ed;
 }
 form {
@@ -14,11 +15,13 @@ h1 {
     text-align: center;
 }
 
-.signup{
+#row{
+    text-align: center;
     width: 100%;
-    padding: 12px 12px;
+    padding: 15px 15px;
     margin: 8px 0;
     box-sizing: border-box;
+    font-size: 70 px;
   }
 
   /*.languages{
@@ -27,7 +30,7 @@ h1 {
 
   select {
     width: 100%;
-    padding: 12px 15px;
+    padding: 12px 12px;
     border: none;
     border-radius: 4px;
     background-color:white;
@@ -35,14 +38,9 @@ h1 {
 
   input{
     width: 100%;
-    padding: 10px 10px;
+    padding: 12px 12px;
     margin: 8px 0;
     box-sizing: border-box;
-  }
-
-  .column{
-      float: left;
-      width: 50%
   }
 
   #submit {
@@ -52,10 +50,10 @@ h1 {
     text-align: center;
     padding: 10px 20px;
     display: inline-block;
-    font-size: 14px;
+    font-size: 18px;
   }
 
-/* @import url(https://fonts.googleapis.com/css?family=Open+Sans);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
 
 input[type="checkbox"] { display: none; }
 
@@ -98,4 +96,4 @@ input[type="checkbox"]:checked + label:before {
   border-left-color: transparent;
   -webkit-transform: rotate(45deg);
   transform: rotate(45deg);
-} */
+} 
