--- a/backend/templates/languages.html
+++ b/backend/templates/languages.html
@@ -12,35 +12,36 @@
         
                 <h2>What languages can you speak?</h2>
                 <div class="languages">
-                    <input type="checkbox" id="English" name="English" value="English">
+                    <input type="checkbox" id="English" name="English1" value="English">
                     <label for="English">English</label><br>
-                    <input type="checkbox" id="Korean" name="Korean" value="Korean">
+                    <input type="checkbox" id="Korean" name="Korean1" value="Korean">
                     <label for="Korean">Korean</label><br>
-                    <input type="checkbox" id="Japanese" name="Japanese" value="Japanese">
+                    <input type="checkbox" id="Japanese" name="Japanese1" value="Japanese">
                     <label for="Japanese">Japanese</label><br><br>
-                    <input type="checkbox" id="Chinese" name="Chinese" value="Chinese">
+                    <input type="checkbox" id="Chinese" name="Chinese1" value="Chinese">
                     <label for="Chinese">Chinese</label><br><br>
-                    <input type="checkbox" id="Spanish" name="Spanish" value="Spanish">
+                    <input type="checkbox" id="Spanish" name="Spanish1" value="Spanish">
                     <label for="Spanish">Spanish</label><br><br>
-                    <input type="checkbox" id="French" name="French" value="French">
-                    <label for="French">French</label><br><br>                   
+                    <input type="checkbox" id="French" name="French1" value="French">
+                    <label for="French">French</label><br><br>       
+                     
                 </div>
                 
 
                 <h2>What languages do you want to learn?</h2>
 
-                <div class="languages">
-                    <input type="checkbox" id="English" name="English" value="English">
+                <div class="languages" id="tow">
+                    <input type="checkbox" id="English" name="English2" value="English">
                     <label for="English">English</label><br>
-                    <input type="checkbox" id="Korean" name="Korean" value="Korean">
+                    <input type="checkbox" id="Korean" name="Korean2" value="Korean">
                     <label for="Korean">Korean</label><br>
-                    <input type="checkbox" id="Japanese" name="Japanese" value="Japanese">
+                    <input type="checkbox" id="Japanese" name="Japanese2" value="Japanese">
                     <label for="Japanese">Japanese</label><br><br>
-                    <input type="checkbox" id="Chinese" name="Chinese" value="Chinese">
+                    <input type="checkbox" id="Chinese" name="Chinese2" value="Chinese">
                     <label for="Chinese">Chinese</label><br><br>
-                    <input type="checkbox" id="Spanish" name="Spanish" value="Spanish">
+                    <input type="checkbox" id="Spanish" name="Spanish2" value="Spanish">
                     <label for="Spanish">Spanish</label><br><br>
-                    <input type="checkbox" id="French" name="French" value="French">
+                    <input type="checkbox" id="French" name="French2" value="French">
                     <label for="French">French</label><br><br>                   
                 </div>
 
