--- a/backend/templates/languages.html
+++ b/backend/templates/languages.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-    <h1>Languages</h1>
+    <h1>Language Survey</h1>
 
     <div id="container">
             <form name="Languages" method='POST' action='/languages'>
