--- a/backend/static/main.css
+++ b/backend/static/main.css
@@ -29,6 +29,11 @@ p {
 
 #container {
     text-align: center;
+    width: auto;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    padding-left: 30px;
+    padding-right: 30px;
 }
 
 #color {
