--- a/backend/templates/profile.html
+++ b/backend/templates/profile.html
@@ -22,7 +22,7 @@
   </nav>
   <div id="container">
     <div class="circular"> 
-        <img src = "https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQRo02mVBfNlT-1_mJo78ttRnuhNHVyTTRPqQ&usqp=CAU"> <br>
+        <img src = "{{image_address}}"> <br>
     </div>
     <label class="profile_name" id="profile_name"> Jane Doe </label>
     <div id="attributes">
@@ -32,9 +32,43 @@
         <label class="profile_attributes" id="email" name="email"> Email Address: {{email}} </label><br>
         <label class="profile_attributes" id="date_created" name="date_created"> Date Created: {{date_created}} </label><br>
       </div>
-    <div id="buttons">
-      <button type="button" id="Edit" onclick="window.location = '/register'">Register</button>
-      <button type="button" id="Submit" onclick="window.location = '/login'">Login</button>
+    <div class="editPage" id="editProfilePage" >
+      <button type="button" id="Edit" onclick="toggleVisibility()"> Edit Profile </button>
+        <form name="Change Attributes" method='POST' action='/profile'>
+          <div class="signup" id= "hiddenInputs" style="display:none">
+            <label for="profilePicture"> Change Profile Picture </label>
+            <input type="text" class="form-control" id = "profilePic" name="profilePic" placeholder="sampleImageAddress.com"> <br>
+
+            <label for="name">Name</label>
+            <input type="text" class="form-control" id = "changeName" name="name" placeholder="New Name"> <br>
+
+            <label for="birthday">Birthday</label>
+            <input type="date" class="form-control"  name="birthday" placeholder="1/1/2020">
+
+            <label for="gender">Gender</label>
+            <select id="changeGender" name="gender">
+              <option>Male</option>
+              <option>Female</option>
+              <option>Nonbinary</option>
+              <option>Prefer not to answer</option>
+            </select> <br>
+
+            <label for="email address">Email address</label>
+            <input type="email" class="form-control" id="changeEmail" name="email" placeholder="example@example.com"><br>
+            <button type="button" id="Submit" onclick="toggleVisibility()"> Submit Changes </button> 
+          </div>
+        </form>
+    </div>
+      <script>
+        function toggleVisibility() {
+          var x = document.getElementById("hiddenInputs");
+          if (x.style.display === "none") {
+            x.style.display = "block";
+          } else {
+            x.style.display = "none";
+          }       
+        }
+      </script>
     </div>
   </div>
 {% endblock%}
