updated logos and checkboxes

--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -9,9 +9,11 @@
     <h1 id='header'>Tōku</h1>   
     <div id="container">
       <div id = "right">
-        <img src= "https://kirbiecravings.com/wp-content/uploads/2018/08/salt-pepper-tofu-12.jpg">
+        <img id = "logo" src= "https://i.ibb.co/X50TY4G/T-kuLogo.png">
         <p>Welcome to Tōku!</p>
-        <p1>basic information about Tōku</p1> <br>
+        <div id = "biography">
+          <p1>basic information about Tōku</p1> <br>
+        </div>
         <button type="button" id="Register" onclick="window.location = '/register'">Register</button>
         <button type="button" id="Login" onclick="window.location = '/login'">Login</button>
     </div>
