--- a/backend/static/main.css
+++ b/backend/static/main.css
@@ -20,7 +20,20 @@ h1 {
     width: auto;
 }
 p {
-    font-size: 1.5em;
+    font-size: 3rem;
+    margin: 10px;
+    padding-top: 20px;
+}
+
+#logo {
+    width: 300px;
+    height: 300px;
+}
+
+#biography {
+    font-size: 2rem;
+    margin: 10px;
+    padding-top: 20px;
 }
 
 .facts {
