--- a/backend/static/main.css
+++ b/backend/static/main.css
@@ -5,7 +5,7 @@ img {
     height: 200px;
 }
 body {    
-    background:beige;
+    background: whitesmoke;
     margin: 20px !important;
     padding: 20px;
     font-family: 'Josefin Sans', cursive;
