--- a/backend/templates/languages.html
+++ b/backend/templates/languages.html
@@ -12,17 +12,17 @@
         
                 <h2>What languages can you speak?</h2>
                 <div class="languages">
-                    <input type="checkbox" id="English" name="English1" value="English">
+                    <input type="checkbox" id="English1" name="English1" value="English">
                     <label for="English">English</label><br>
-                    <input type="checkbox" id="Korean" name="Korean1" value="Korean">
+                    <input type="checkbox" id="Korean1" name="Korean1" value="Korean">
                     <label for="Korean">Korean</label><br>
-                    <input type="checkbox" id="Japanese" name="Japanese1" value="Japanese">
+                    <input type="checkbox" id="Japanese1" name="Japanese1" value="Japanese">
                     <label for="Japanese">Japanese</label><br><br>
-                    <input type="checkbox" id="Chinese" name="Chinese1" value="Chinese">
+                    <input type="checkbox" id="Chinese1" name="Chinese1" value="Chinese">
                     <label for="Chinese">Chinese</label><br><br>
-                    <input type="checkbox" id="Spanish" name="Spanish1" value="Spanish">
+                    <input type="checkbox" id="Spanish1" name="Spanish1" value="Spanish">
                     <label for="Spanish">Spanish</label><br><br>
-                    <input type="checkbox" id="French" name="French1" value="French">
+                    <input type="checkbox" id="French1" name="French1" value="French">
                     <label for="French">French</label><br><br>       
                      
                 </div>
@@ -31,17 +31,17 @@
                 <h2>What languages do you want to learn?</h2>
 
                 <div class="languages" id="tow">
-                    <input type="checkbox" id="English" name="English2" value="English">
+                    <input type="checkbox" id="English2" name="English2" value="English">
                     <label for="English">English</label><br>
-                    <input type="checkbox" id="Korean" name="Korean2" value="Korean">
+                    <input type="checkbox" id="Korean2" name="Korean2" value="Korean">
                     <label for="Korean">Korean</label><br>
-                    <input type="checkbox" id="Japanese" name="Japanese2" value="Japanese">
+                    <input type="checkbox" id="Japanese2" name="Japanese2" value="Japanese">
                     <label for="Japanese">Japanese</label><br><br>
-                    <input type="checkbox" id="Chinese" name="Chinese2" value="Chinese">
+                    <input type="checkbox" id="Chinese2" name="Chinese2" value="Chinese">
                     <label for="Chinese">Chinese</label><br><br>
-                    <input type="checkbox" id="Spanish" name="Spanish2" value="Spanish">
+                    <input type="checkbox" id="Spanish2" name="Spanish2" value="Spanish">
                     <label for="Spanish">Spanish</label><br><br>
-                    <input type="checkbox" id="French" name="French2" value="French">
+                    <input type="checkbox" id="French2" name="French2" value="French">
                     <label for="French">French</label><br><br>                   
                 </div>
 
