--- a/backend/templates/profile.html
+++ b/backend/templates/profile.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block content %}
+
   <h1>Profile Page</h1>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="">Tōku</a>
@@ -14,7 +15,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/profile">Profile <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="/matchpage">Matches</a>
+        <a class="nav-item nav-link" href="/match">Matches</a>
         <a class="nav-item nav-link" href="/friends">Friends</a>
         <a class="nav-item nav-link" href="#">Help/FAQ</a>
       </div>
