--- a/backend/templates/matchpage.html
+++ b/backend/templates/matchpage.html
@@ -7,8 +7,56 @@
 extends profile.html 
 
 <h1> Matches! </h1>
-
-
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="">Tōku</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link" href="/profile">Profile <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="/match">Matches</a>
+        <a class="nav-item nav-link" href="/friends">Friends</a>
+        <a class="nav-item nav-link" href="#">Help/FAQ</a>
+      </div>
+    </div>
+  </nav>
+<div id="matchingPage">
+    <div id = "matchingDescription">
+        <h2> 
+            Hello! Congratulations on getting matched!
+            Here you'll see people who you matched with. Take a look at what language you will help them with and which language they will help you with!
+            If you click on the "Add Friend" button, you will be able to communicate with them! 
+        </h2>
+    </div>
+    <div id = "matches">
+        <div class="boxed">
+            <label class="matched_attributes" id="name" name="name"> Name: {{name}} </label> 
+            <label class="matched_attributes" id="myLang" name="myLang"> Your Language: {{Language}} </label>
+            <label class="matched_attributes" id="theirLang" name="theirLang"> Their Language: {{Language}} </label>
+        </div> 
+        <div class="boxed">
+            <label class="matched_attributes" id="name" name="name"> Name: {{name}} </label> 
+            <label class="matched_attributes" id="myLang" name="myLang"> Your Language: {{Language}} </label>
+            <label class="matched_attributes" id="theirLang" name="theirLang"> Their Language: {{Language}} </label>
+        </div> 
+        <div class="boxed">
+            <label class="matched_attributes" id="name" name="name"> Name: {{name}} </label> 
+            <label class="matched_attributes" id="myLang" name="myLang"> Your Language: {{Language}} </label>
+            <label class="matched_attributes" id="theirLang" name="theirLang"> Their Language: {{Language}} </label>        
+        </div>
+        <div class="boxed">
+            <label class="matched_attributes" id="name" name="name"> Name: {{name}} </label> 
+            <label class="matched_attributes" id="myLang" name="myLang"> Your Language: {{Language}} </label>
+            <label class="matched_attributes" id="theirLang" name="theirLang"> Their Language: {{Language}} </label>        
+        </div>
+        <div class="boxed">
+            <label class="matched_attributes" id="name" name="name"> Name: {{name}} </label> 
+            <label class="matched_attributes" id="myLang" name="myLang"> Your Language: {{Language}} </label>
+            <label class="matched_attributes" id="theirLang" name="theirLang"> Their Language: {{Language}} </label>        
+        </div>
+    </div>
+</div>
 
 {% block content %}
     basic hi
