updated version w readme

--- a/backend/templates/faq.html
+++ b/backend/templates/faq.html
@@ -21,8 +21,7 @@
         </div>
     </nav>
 
-    <p>In today’s world, communication and cultural understanding are both fundamental qualities for ____. \
-    Tōku is a language partner finding app where people from all around the world can connect with each other while practicing new language skills.</p>
+    <p>Communication and cultural understanding are both fundamental qualities in modern society, which is why we were inspired to create Tōku. Tōku is a language-learning, partner-finding app where people from all around the world can connect with each other while practicing new languages.</p>
     
     <div class="row">
         <h2>Meet the creators!</h2>
