--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -12,7 +12,7 @@
         <img id = "logo" src= "https://i.ibb.co/X50TY4G/T-kuLogo.png">
         <p>Welcome to Tōku!</p>
         <div id = "biography">
-          <p1>basic information about Tōku</p1> <br>
+          <p1>Want to learn a new language? Why do it alone? Find your language buddy today!</p1> <br>
         </div>
         <button type="button" id="Register" onclick="window.location = '/register'">Register</button>
         <button type="button" id="Login" onclick="window.location = '/login'">Login</button>
