updated faq page + readme

--- a/backend/templates/faq.html
+++ b/backend/templates/faq.html
@@ -20,17 +20,31 @@
           </div>
         </div>
     </nav>
+    <div class = "info">
+      <h2>Communication and cultural understanding are both fundamental qualities in modern society, which is why we were inspired to create Tōku. Tōku is a language-learning, partner-finding app where people from all around the world can connect with each other while practicing new languages.<br><br> Meet the creators:</h2>
+    </div>
 
-    <p>Communication and cultural understanding are both fundamental qualities in modern society, which is why we were inspired to create Tōku. Tōku is a language-learning, partner-finding app where people from all around the world can connect with each other while practicing new languages.</p>
-    
     <div class="row">
-        <h2>Meet the creators!</h2>
-        <div class="column"></div>
-            <h3>Sky Jung</h3>
-        <div class="column"></div>
-            <h3>Jeffrey Mun</h3>
-        <div class="column"></div>
-            <h3>Anna Katherine Zhao</h3>
+      <div class="column">
+        <h3>Sky Jung</h3> 
+        <img id = "logo" src= "https://i.ibb.co/X50TY4G/T-kuLogo.png">
+        <p3>hello! my name is sky jung and i like anime</p3>
+      </div>
+      <div class="column">
+        <h3>Jeffrey Mun</h3> 
+        <img id = "logo" src= "https://i.ibb.co/X50TY4G/T-kuLogo.png">
+        <p3>hello! my name is jeffrey mun and i like anime</p3>
+      </div>
+      <div class="column">
+        <h3>Nathan Zhang</h3> 
+        <img id = "logo" src= "https://i.ibb.co/X50TY4G/T-kuLogo.png">
+        <p3>hello! my name is nathan zhang and i like anime</p3>
+      </div>
+      <div class="column"> 
+        <h3>Anna Zhao</h3> 
+        <img id = "logo" src= "https://i.ibb.co/X50TY4G/T-kuLogo.png">
+        <p3>hello! my name is anna zhao and i like anime</p3>
+      </div>    
     </div>
 
 {% endblock%}s
