--- a/backend/static/faq.css
+++ b/backend/static/faq.css
@@ -1,4 +1,26 @@
+
+
 .column {
     float: middle;
-    width: 33.33%;
+    width: 25%;
+    padding: 70px 0;
   }
+
+ .row{ 
+   padding: 50x;
+ } 
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+
+p3{
+  font-size: 1rem;
+}
+
+.info {
+  padding: 50x;
+}
