--- a/backend/templates/profile.html
+++ b/backend/templates/profile.html
@@ -18,24 +18,6 @@
         <a class="nav-item nav-link" href="/match" onclick='get_current_token("/match");'>Matches</a>
         <a class="nav-item nav-link" href="/friends" onclick='get_current_token("/friends");'>Friends</a>
         <a class="nav-item nav-link" href="/faq">Help/FAQ</a>
-        <script>
-            function get_current_token(String)
-            {
-                var get_current_token = '@Session["current_token"]';
-                $.post(url, get_current_token);
-                $.ajax({
-                    url: url,
-                    type: "POST",
-                    data: JSON.stringify(get_current_token),
-                    processData: false,
-                    contentType: "application/json; charset=UTF-8",
-                    complete: function() {
-                        console.log("request complete!");
-                        window.location = url;
-                    }
-                });
-            }
-        </script>
       </div>
     </div>
   </nav>
@@ -50,6 +32,8 @@
         <label class="profile_attributes" id="gender" name="gender"> Gender: {{gender}} </label><br>
         <label class="profile_attributes" id="email" name="email"> Email Address: {{email}} </label><br>
         <label class="profile_attributes" id="date_created" name="date_created"> Date Created: {{date_created}} </label><br>
+        <label class="profile_attributes" id="user_languages" name="user_languages"> User Languages: {{user_languages}} </label><br>
+        <label class="profile_attributes" id="match_languages" name="match_languages"> Match Languages: {{match_languages}} </label><br>
       </div>
     <div class="editPage" id="editProfilePage" >
       <button type="button" id="Edit" onclick="toggleVisibility()"> Edit Profile </button>
