--- a/backend/templates/matchpage.html
+++ b/backend/templates/matchpage.html
@@ -33,7 +33,7 @@ extends profile.html
             </h4>
         </div>
         <div id="tblofmatches">
-            <table style ="width:100%">
+            <table style ="width:100%" id="match_table">
                 <tr>
                     <th>Name</th>
                     <th>Match Language</th>
@@ -43,24 +43,25 @@ extends profile.html
                 <tr>
                     <td>{{username}}</td>
                     <td>{{language}}</td>
-                    <td><button class="button" id="friend_button" name="friend_button" onclick='addFriend()'>Add Friend</button></td>
+                    <td><button class="button" id="{{username}}" name="friend_button" onclick='addFriend("{{username}}")'>Add Friend</button></td>
                 </tr>
                 {% endfor %}
             </table>
         </div>
         <script>
-            function addFriend() {
-                var x = document.getElementById("friend_button");
+            function addFriend(username) {
+                var x = document.getElementById(username);
                 if(x.innerHTML == "Add Friend")
                 {
                     x.innerHTML = "Friend Added!";
-                    setTimeout(() => {x.innerHTML = "Remove Friend";}, 3000);
+                    setTimeout(() => {x.innerHTML = "Remove Friend";}, 2000);
                 }
                 else if (x.innerHTML == "Remove Friend")
                 {
                     x.innerHTML = "Friend Removed!";
-                    setTimeout(() => {x.innerHTML = "Add Friend";}, 3000);
+                    setTimeout(() => {x.innerHTML = "Add Friend";}, 2000);
                 }
+                //add_friend(); for implementing Friends page in app.py
             }
         </script>
         
