--- a/backend/templates/faq.html
+++ b/backend/templates/faq.html
@@ -17,6 +17,7 @@
             <a class="nav-item nav-link" href="/match">Matches</a>
             <a class="nav-item nav-link" href="/friends">Friends</a>
             <a class="nav-item nav-link" href="/faq">Help/FAQ</a>
+            <a class="nav-item nav-link" href="/logout">Logout</a>
           </div>
         </div>
     </nav>
