--- a/backend/templates/friends.html
+++ b/backend/templates/friends.html
@@ -38,7 +38,7 @@
                 <label class="friends_attributes" id="name" name="name"> Name: {{name}} </label> 
                 <label class="friends_attributes" id="myLang" name="myLang"> Language: {{language}} </label>
                 <!--label class="friends_attributes" id="theirLang" name="theirLang"> Their Language: {{match_language}} </label-->
-                <label class="friends_attributes" id="email" name="email"> Their Email: {{email_address}} </label>
+                <!--label class="friends_attributes" id="email" name="email"> Their Email: {{email_address}} </label-->
             
             {% endfor %}
             <!--div class="boxed">
@@ -82,17 +82,43 @@
             </div>
             <form name="message" method='POST' action='/friends'>
              <div class="modal-body" id="previewBody"> 
-                <label for="email address">Email address: {{email_address}}</label>
+                <label for="email address">To: {{match_email}}</label><br>
+                <label for="email address">From: {{email}}</label>
                 <input type="text" class="modal-body" id="modal-text" name="text" placeholder="Type message here."><br>
             </div>
             <div class="modal-footer">
-                <button type="submit" class="btn btn-secondary" method="POST">Send</button>
+                <button type="submit" id="send" class="btn btn-secondary" data-dismiss="modal" method="POST" onclick='show();'>Send</button>
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <script>
+                    function show() {
+                        var x = document.getElementById("success");
+                        x.style.visibility = "visible";
+                        setTimeout(hide(), 5000);
+                    }
+                    function hide(){
+                        var x = document.getElementById("success");
+                        if (x.style.visibility === "visible") {
+                            x.style.visibility = "hidden";
+                        } else {
+                            x.style.visibility ="visible"
+                        }
+                    }
+                    
+                </script>
             </div>
             </form>
         </div>
         </div>
     </div>
+    <div class="alert alert-success" id="success">
+        <strong>Success!</strong> 
+    </div>
+    <style type="text/css">
+        div#success {
+          visibility:hidden;
+        }
+      </style>
+    
     
 {% endblock%}
 
