--- a/backend/static/register.css
+++ b/backend/static/register.css
@@ -16,14 +16,14 @@ h1 {
     text-align: center;
 }
 
-#row{
+/* #row{
     text-align: center;
     width: 100%;
     padding: 15px 15px;
     margin: 8px 0;
     box-sizing: border-box;
     font-size: 70 px;
-  }
+  } */
 
   /*.languages{
     display: inline-block;
