--- a/backend/static/main.css
+++ b/backend/static/main.css
@@ -26,9 +26,15 @@ p {
 }
 
 #logo {
-    width: 300px;
-    height: 300px;
+    width: 400px;
+    height: 400px;
 }
+
+#logo2 {
+    width: 150px;
+    height: 150px;
+}
+
 
 #biography {
     font-size: 2rem;
@@ -73,4 +79,8 @@ p {
     margin-top: 75px !important;
     width: 50%;
     margin: auto;
+}
+
+#friendsDescription {
+    padding: 30px;
 }
