--- a/backend/templates/faq.html
+++ b/backend/templates/faq.html
@@ -7,6 +7,7 @@
 {% block content %}
     <h1>About</h1>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <!--a class="navbar-brand"><img id = "logo2" src= "https://i.ibb.co/X50TY4G/T-kuLogo.png"></a-->
         <a class="navbar-brand" href="">Tōku</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -16,36 +17,38 @@
             <a class="nav-item nav-link" href="/profile">Profile <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" href="/match">Matches</a>
             <a class="nav-item nav-link" href="/friends">Friends</a>
-            <a class="nav-item nav-link" href="/faq">Help/FAQ</a>
+            <a class="nav-item nav-link" href="/faq">About</a>
             <a class="nav-item nav-link" href="/logout">Logout</a>
           </div>
         </div>
     </nav>
-    <div class = "info">
-      <h2>Communication and cultural understanding are both fundamental qualities in modern society, which is why we were inspired to create Tōku. Tōku is a language-learning, partner-finding app where people from all around the world can connect with each other while practicing new languages.<br><br> Meet the creators:</h2>
+    <div>
+      <h4>Meet the creators:</h4>
     </div>
-
     <div class="row">
       <div class="column">
         <h3>Sky Jung</h3> 
-        <img id = "logo" src= "https://i.ibb.co/X50TY4G/T-kuLogo.png">
+        <img id = "logo" src= "https://i.ibb.co/X50TY4G/T-kuLogo.png"><br>
         <p3>hello! my name is sky jung and i like anime</p3>
       </div>
       <div class="column">
         <h3>Jeffrey Mun</h3> 
-        <img id = "logo" src= "https://i.ibb.co/X50TY4G/T-kuLogo.png">
+        <img id = "logo" src= "https://i.ibb.co/X50TY4G/T-kuLogo.png"><br>
         <p3>hello! my name is jeffrey mun and i like anime</p3>
       </div>
       <div class="column">
         <h3>Nathan Zhang</h3> 
-        <img id = "logo" src= "https://i.ibb.co/X50TY4G/T-kuLogo.png">
+        <img id = "logo" src= "https://i.ibb.co/X50TY4G/T-kuLogo.png"><br>
         <p3>hello! my name is nathan zhang and i like anime</p3>
       </div>
       <div class="column"> 
         <h3>Anna Zhao</h3> 
-        <img id = "logo" src= "https://i.ibb.co/X50TY4G/T-kuLogo.png">
+        <img id = "logo" src= "https://i.ibb.co/X50TY4G/T-kuLogo.png"><br>
         <p3>hello! my name is anna zhao and i like anime</p3>
       </div>    
+    </div>
+    <div class = "info">
+      <h3> Communication and cultural understanding are both fundamental qualities in modern society, which is why we were inspired to create Tōku. Tōku is a language-learning, partner-finding app where people from all around the world can connect with each other while practicing new languages.<br><br> </h3>
     </div>
 
 {% endblock%}s
