--- a/backend/templates/profile.html
+++ b/backend/templates/profile.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-  <h1>Profile Page</h1>
+  <h1>Profile</h1>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="">Tōku</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -17,7 +17,7 @@
         <a class="nav-item nav-link" href="/profile">Profile <span class="sr-only">(current)</span></a>
         <a class="nav-item nav-link" href="/match">Matches</a>
         <a class="nav-item nav-link" href="/friends">Friends</a>
-        <a class="nav-item nav-link" href="/faq">Help/FAQ</a>
+        <a class="nav-item nav-link" href="/faq">About</a>
         <a class="nav-item nav-link" href="/logout">Logout</a>
       </div>
     </div>
@@ -26,8 +26,9 @@
     <div class="circular"> 
         <img src = "{{image_address}}"> <br>
     </div>
-    <label class="profile_name" id="profile_name"> {{name}} </label>
-    <div id="attributes">
+    
+    <div id="attributes" class="attributes">
+      <label class="profile_name" id="profile_name"> {{name}} </label><br>
         <label class="profile_attributes" id="name" name="name"> Name: {{name}} </label> <br>
         <label class="profile_attributes" id="birthday" name="birthday"> Birthday: {{birthday}} </label><br>
         <label class="profile_attributes" id="gender" name="gender"> Gender: {{gender}} </label><br>
