--- a/backend/templates/profile.html
+++ b/backend/templates/profile.html
@@ -22,7 +22,7 @@
       </div>
     </div>
   </nav>
-  <div id="container">
+  <div id="profile_container">
     <div class="circular"> 
         <img src = "{{image_address}}"> <br>
     </div>
